Adição do elemento Header que contém a logo, e do elemento Footer com o copyright, ambos com CSS

--- a/src/components/FormularioCliente.css
+++ b/src/components/FormularioCliente.css
@@ -3,6 +3,7 @@ form {
   flex-direction: column;
   gap: 12px;
   max-width: 500px;
+  font-weight: bold;
   margin: 0 auto;
   padding: 24px;
   background-color: #f9f9f9;
