--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html {
+  background-image: url(./assets/kumon.jpg);
+}
+
 .app-container {
   max-width: 960px;
   margin: 0 auto;
@@ -15,6 +19,11 @@ h1 {
 }
 
 h2 {
-  margin-top: 24px;
+  margin-top: -14px;
   margin-bottom: 16px;
+  border: 1px solid white;
+  width: 16rem;
+  text-align: center;
+  border-radius: 0.4rem;
+  box-shadow: 0 0 10px var(--form-box-shadow);
 }
